# agent-util

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  PHASE.md  Package.swift  README.md  go.mod  test_workflows.py
.claude/agent-design/: agent-loop-and-tools.md  harness-patterns.md  memory-and-context.md
.claude/commands/: agent-design.md  decision.md  investigate.md
.claude/decisions/: 002-router-single-tool-pattern.md
.claude/rules/: cmd.md  context-mgmt.md  engine.md  go-general.md  llm.md  protocol.md  rpc.md  tool.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: ci.yml  release.yml
cmd/agent/: approver.go  main.go
docs/: BINARY_DISTRIBUTION.md  CONTRIBUTING.md  README.md  RELEASE.md  RELEASE_CHECKLIST.md  RELEASE_NOTES_v0.1.0.md  VERSIONING.md  openrpc.json
docs/api/: README.md  builtins.md  errors.md  overview.md
docs/schemas/: AgentAbortParams.json  AgentAbortResult.json  AgentConfigureParams.json  AgentConfigureResult.json  AgentRunParams.json  AgentRunResult.json  CompactionConfig.json  ContextStatusParams.json  CoordinatorConfig.json  DelegateConfig.json  GuardDefinition.json  (+35 more)
examples/: README.md
sample/: test_all.py
scripts/: check_all.sh  check_md_links.py
sdk/: README.md
sdk/python/: README.md  pyproject.toml
sdk/python/ai_agent/: __init__.py  client.py  config.py  easy.py  errors.py  guard.py  jsonrpc.py  tool.py  verifier.py
sdk/python/examples/: e2e_llm_remote.py  e2e_llm_remote_with_tool.py
sdk/python/tests/: conftest.py  test_config.py  test_e2e.py  test_easy.py  test_jsonrpc.py  test_tool.py
(+340 files in other folders)
