[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-agent-sdk"
version = "0.1.0"
description = "Python SDK for ai-agent — thin JSON-RPC client + tool decorator"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "ai-agent contributors" },
]
keywords = ["ai-agent", "sllm", "json-rpc", "agent", "harness"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
# Runtime depends only on the standard library (asyncio, subprocess, json, ...).
dependencies = []

[project.optional-dependencies]
test = [
    "pytest>=7.4",
    "pytest-asyncio>=1.3.0",
]

[project.urls]
Homepage = "https://github.com/ai-agent"
"Bug Tracker" = "https://github.com/ai-agent/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["ai_agent*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
]
